examples/test/testpolicy14100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14100
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key47: value15
      key23: value44
      key13: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value28
          key19: value8
      podSelector:
        matchLabels:
          key13: value25
          key38: value34
